--- a/index.html
+++ b/index.html
@@ -7,15 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module-6</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">
+    <link href="css/addNewTask.css" rel="stylesheet">
+    <link href="css/showTasks.css" rel="stylesheet">
     <script defer src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body >
+<body>
     <div class="container">
-        
+        <header>
+            <h1 class="header__title">
+                Lista zadań
+            </h1>
+        </header>
+        <main class="main">
+            <section>
+                <div class="addNewTask">
+                    <div class="addNewTask__top">
+                        <h2 class="addNewTask__title">
+                            Dodaj nowe zadanie
+                        </h2>
+                    </div>
+                    <div class="addNewTask__line">
+                        <hr>
+                    </div>
+                    <div class="addNewTask__bottom">
+                            <label class="addNewTask__label">
+                                <input class="addNewTask__input" placeholder=" Co jest do zrobienia?">
+                            </label>
+                        <button class="addNewTask__button">Dodaj zadanie</button>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="showTasks">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate laborum fuga veritatis iste.
+                    Exercitationem dolore minus nostrum perferendis, corrupti, tempore, sapiente hic dolorum voluptate
+                    molestiae culpa veniam nisi amet nulla?
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 
