removed class from addNewTask - <hr> and added 3 rows to bottom window

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                             Dodaj nowe zadanie
                         </h2>
                     </div>
-                    <div class="addNewTask__line">
+                    <div>
                         <hr>
                     </div>
                     <div class="addNewTask__bottom">
-                            <label class="addNewTask__label">
-                                <input class="addNewTask__input" placeholder=" Co jest do zrobienia?">
-                            </label>
+                        <label class="addNewTask__label">
+                            <input class="addNewTask__input" placeholder=" Co jest do zrobienia?">
+                        </label>
                         <button class="addNewTask__button">Dodaj zadanie</button>
                     </div>
                 </div>
@@ -47,6 +47,14 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate laborum fuga veritatis iste.
                     Exercitationem dolore minus nostrum perferendis, corrupti, tempore, sapiente hic dolorum voluptate
                     molestiae culpa veniam nisi amet nulla?
+                    <div>
+                        <hr>
+                    </div>
+                    <div>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum placeat, cupiditate
+                        voluptatibus eligendi non quaerat velit, nihil corporis aspernatur quidem adipisci dolores minus
+                        ratione! Fugit obcaecati veniam tenetur doloremque cum?
+                    </div>
                 </div>
             </section>
         </main>
