added back class to <hr>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </h2>
                     </div>
                     <div>
-                        <hr>
+                        <hr class="addNewTask__line">
                     </div>
                     <div class="addNewTask__bottom">
                         <label class="addNewTask__label">
