--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                             Dodaj nowe zadanie
                         </h2>
                     </div>
-                    <div>
-                        <hr class="addNewTask__line">
+                    <div class="addNewTask__line">
+                        <hr>
                     </div>
-                    <div class="addNewTask__bottom">
+                    <div class="addNewTask__input">
                         <label class="addNewTask__label">
-                            <input class="addNewTask__input" placeholder=" Co jest do zrobienia?">
+                            <input class="addNewTask__write" placeholder=" Co jest do zrobienia?">
                         </label>
                         <button class="addNewTask__button">Dodaj zadanie</button>
                     </div>
@@ -44,13 +44,15 @@
             </section>
             <section>
                 <div class="showTasks">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate laborum fuga veritatis iste.
-                    Exercitationem dolore minus nostrum perferendis, corrupti, tempore, sapiente hic dolorum voluptate
-                    molestiae culpa veniam nisi amet nulla?
                     <div>
+                        <h2 class="showTasks__title">
+                            Lista zadań
+                        </h2>
+                    </div>
+                    <div class="showTasks__line">
                         <hr>
                     </div>
-                    <div>
+                    <div class="showTasks__output">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum placeat, cupiditate
                         voluptatibus eligendi non quaerat velit, nihil corporis aspernatur quidem adipisci dolores minus
                         ratione! Fugit obcaecati veniam tenetur doloremque cum?
