added bottom window

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <label class="addNewTask__label">
                             <input class="addNewTask__write" placeholder=" Co jest do zrobienia?">
                         </label>
-                        <button class="addNewTask__button">Dodaj zadanie</button>
+                        <button type="button" class="addNewTask__button">Dodaj zadanie</button>
                     </div>
                 </div>
             </section>
@@ -53,9 +53,20 @@
                         <hr>
                     </div>
                     <div class="showTasks__output">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum placeat, cupiditate
-                        voluptatibus eligendi non quaerat velit, nihil corporis aspernatur quidem adipisci dolores minus
-                        ratione! Fugit obcaecati veniam tenetur doloremque cum?
+                        <div class="showTasks__done">
+                            ✔
+                        </div>
+                        <div class="showTasks__read">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam neque voluptates, natus
+                            laudantium eos laborum iure incidunt fugit iusto officia, quidem amet corrupti aperiam
+                            asperiores libero repudiandae nesciunt illum nam.
+                        </div>
+                        <div class="showTasks__remove">
+                            🗑
+                        </div>
+                        <div class="test">
+                            <hr>
+                        </div>
                     </div>
                 </div>
             </section>
