Windows are ready !

--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@
                         <hr>
                     </div>
                     <div class="showTasks__output">
-                        <div class="showTasks__done">
+                        <button class="showTasks__done">
                             ✔
-                        </div>
+                        </button>
                         <div class="showTasks__read">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam neque voluptates, natus
-                            laudantium eos laborum iure incidunt fugit iusto officia, quidem amet corrupti aperiam
-                            asperiores libero repudiandae nesciunt illum nam.
+                            Example task
                         </div>
                         <div class="showTasks__remove">
                             🗑
