--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module-6</title>
+    <link href="images/task.png" rel="icon">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/addNewTask.css" rel="stylesheet">
     <link href="css/showTasks.css" rel="stylesheet">
