responsiveness for lower screens flex-wrap

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <div class="addNewTask__line">
                         <hr>
                     </div>
-                    <form class="addNewTask__flexForm js-form">
+                    <form class="addNewTask__flexForm addNewTask__flexForm--resize js-form">
                         <label class="js-label addNewTask__label">
                             <input class="addNewTask__input js-input" placeholder=" Co jest do zrobienia?" autofocus>
                         </label>
-                        <button class="addNewTask__button js-button">Dodaj zadanie</button>
+                        <button class="addNewTask__button addNewTask__button--resize js-button">Dodaj zadanie</button>
                     </form>
                 </div>
             </section>
