Fixed responsiveness for 'add new task' button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
         <main class="main">
             <section>
-                <div class="addNewTask">
+                <div class="addNewTask addNewTask--shrink">
                     <div class="addNewTask__top">
                         <h2 class="addNewTask__title">
                             Dodaj nowe zadanie
