--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module-6</title>
     <link href="images/task.png" rel="icon">
+    <meta property="og:image" content="images/toDoList.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/addNewTask.css" rel="stylesheet">
     <link href="css/showTasks.css" rel="stylesheet">
