added application build to README.md and removed divs from headers

--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
         <main class="main">
             <section>
                 <div class="addNewTask addNewTask--shrink">
-                    <div class="addNewTask__top">
-                        <h2 class="addNewTask__title">
-                            Dodaj nowe zadanie
-                        </h2>
-                    </div>
+                    <h2 class="addNewTask__title">
+                        Dodaj nowe zadanie
+                    </h2>
                     <div class="addNewTask__line">
                         <hr>
                     </div>
-                    <form class="addNewTask__flexForm addNewTask__flexForm--resize js-form">
+                    <form class="addNewTask__Form addNewTask__Form--resize js-form">
                         <label class="js-label addNewTask__label">
                             <input class="addNewTask__input js-input" placeholder=" Co jest do zrobienia?" autofocus>
                         </label>
@@ -45,11 +43,9 @@
             </section>
             <section>
                 <div class="showTasks">
-                    <div>
-                        <h2 class="showTasks__title">
-                            Lista zadań
-                        </h2>
-                    </div>
+                    <h2 class="showTasks__title">
+                        Lista zadań
+                    </h2>
                     <div class="showTasks__line">
                         <hr>
                     </div>
