--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                     <h2 class="addNewTask__title">
                         Dodaj nowe zadanie
                     </h2>
-                    <div class="addNewTask__line">
-                        <hr>
-                    </div>
+                    <hr class="addNewTask__line">
                     <form class="addNewTask__Form addNewTask__form--resize js-form">
                         <label class="js-label addNewTask__label">
                             <input class="addNewTask__input js-input" placeholder=" Co jest do zrobienia?" autofocus>
@@ -46,9 +44,7 @@
                     <h2 class="showTasks__title">
                         Lista zadań
                     </h2>
-                    <div class="showTasks__line">
-                        <hr>
-                    </div>
+                    <hr class="showTasks__line">
                     <ul class="showTasks__list js-output">
                     </ul>
                 </div>
